обновила модели, формы и настройки проекта

--- a/tracker/templates/tracker/analytics_chartjs.html
+++ b/tracker/templates/tracker/analytics_chartjs.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<h2>Рекомендации</h2>
+
+{% if recommendations %}
+    <ul>
+        {% for rec in recommendations %}
+            <li>{{ rec }}</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>На данный момент рекомендаций нет.</p>
+{% endif %}
