--- a/tracker/templates/tracker/study_days_list.html
+++ b/tracker/templates/tracker/study_days_list.html
@@ -1,12 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+{% extends "tracker/base.html" %}
+{% block title %}Учебная эффективность{% endblock %}
+{% block content %}
     <style>
         body {
             background-color: #F0E8D5;
@@ -107,19 +101,7 @@
             font-size: 15px;
             margin: 0;
         }
-
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-<div class="container pt-3">
-    <div class="dashboard-header">
-        <h1>Учебная эффективность</h1>
-        <p class="subtitle">
-            Анализ учебной активности, психоэмоционального состояния и продуктивности
-        </p>
-    </div>
-</div>
 
 <div class="container py-3">
     <!-- Форма -->
@@ -468,5 +450,4 @@ fetch("{% url 'analytics_data' %}?" + params.toString())
         });
     });
 </script>
-</body>
-</html>
+{% endblock %}
